CI: parallel test classes, xlarge heap budgets, opt-in build scans